kubernetes/default/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "50"
spec:
  selector:
    app: audiobookshelf
  ports:
    - targetPort: 80
      port: 80
