kubernetes/default/audiobookshelf/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`audiobookshelf.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
          # - name: servarr-cors
      services:
        - name: audiobookshelf
          port: 80
  tls:
    secretName: bhamm-lab-tls
